files and theories within a proper session context (like regular
"isabelle build"). Output of prover messages works roughly like
"isabelle build_log", while the theories are being processed.

Examples:

  isabelle process_theories -U -O HOL-Library.Multiset

  isabelle process_theories -U -O -o show_states HOL-Library.Multiset

  isabelle process_theories -f '~~/src/HOL/Examples/Seq.thy'

* System option "show_results" (default true) controls output of
toplevel command results (definitions, theorems) in batch-builds. In
interactive mode this is always enabled; in batch-builds it can be
disable like this:

    isabelle build -o show_results=false FOL

Option "show_results" is also the default for the configuration option
"show_results" within the formal context --- instead of "show_states"
that was used for this purpose before.

* The traditional ML system settings have been reconsidered, and mostly
replaced by ML_Settings in Isabelle/Scala (e.g. via
ML_Settings.system(Options.init())). Potential INCOMPATIBILITY for old
shell scripts, which should be replaced by proper Isabelle/Scala tools
anyway. The following environment variables still have a purpose:

  - ML_SYSTEM, ML_PLATFORM, ML_HOME as provided to Isabelle/ML (see also
    structure ML_System).

  - Optional ML_PLATFORM or ML_OPTIONS as input in user settings, which
    take precedence if assigned to a proper value. Otherwise,
    ML_PLATFORM is derived from system options ML_system_64 and
    ML_system_apple, and ML_OPTIONS is taken from ML_OPTIONS32 or
    ML_OPTIONS64 (depending on the effective ML_PLATFORM).

Examples:

    isabelle build -o ML_system_64 -b HOL
    isabelle jedit -o ML_system_64

* System option "ML_platform" specifies the underlying Poly/ML platform
identifier explicitly: it takes precedence over all other options and
settings to determine the ML_PLATFORM (see above).

* System option "build_progress_detailed" tells "isabelle build" to