@@ -24,7 +24,7 @@ sig
   val remove_thy: string -> unit
   val use_theories: Options.T -> string -> (string * Position.T) list ->
     (theory * Document_Output.segment list) list
-  val use_thy: string -> unit
+  val use_thy_legacy: string -> unit
   val finish: unit -> unit
 end;
 
@@ -458,8 +458,9 @@ end;
 fun use_theories options qualifier imports =
   schedule_theories (#2 (require_thys options [] qualifier Path.current imports String_Graph.empty));
 
-fun use_thy name =
-  ignore (use_theories (Options.default ()) Resources.default_qualifier [(name, Position.none)]);
+fun use_thy_legacy name =
+  Runtime.toplevel_program (fn () =>
+    ignore (use_theories (Options.default ()) Resources.default_qualifier [(name, Position.none)]));
 
 
 (* finish all theories *)
@@ -467,5 +468,3 @@ fun use_thy name =
 fun finish () = change_thys (String_Graph.map (fn _ => fn (_, entry) => (NONE, entry)));
 
 end;
-
-fun use_thy name = Runtime.toplevel_program (fn () => Thy_Info.use_thy name);
